--- a/Bubble Pop/Bubble Pop/Base.lproj/Main.storyboard
+++ b/Bubble Pop/Bubble Pop/Base.lproj/Main.storyboard
@@ -34,31 +34,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q0a-qt-h8q">
-                                <rect key="frame" x="121" y="513" width="133" height="62"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Ranks"/>
-                                <connections>
-                                    <segue destination="3xc-e9-lJh" kind="show" id="MaH-QR-d8p"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WF6-Cl-v5X">
-                                <rect key="frame" x="172" y="475" width="30" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WF6-Cl-v5X">
+                                <rect key="frame" x="172.5" y="328.5" width="30" height="30"/>
                                 <state key="normal" title="Play"/>
                                 <connections>
                                     <segue destination="WrR-1Q-vM7" kind="show" id="DTN-9f-wd7"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="HOME SCREEN" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fX9-qh-qn4">
-                                <rect key="frame" x="132" y="158" width="119" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Q0a-qt-h8q">
+                                <rect key="frame" x="166.5" y="391" width="42" height="30"/>
+                                <state key="normal" title="Ranks"/>
+                                <connections>
+                                    <segue destination="3xc-e9-lJh" kind="show" id="MaH-QR-d8p"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="WF6-Cl-v5X" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="Qr0-rU-K62"/>
+                            <constraint firstItem="Q0a-qt-h8q" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="cE4-uj-5Tb"/>
+                            <constraint firstItem="WF6-Cl-v5X" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="qSc-GF-XRa"/>
+                            <constraint firstItem="Q0a-qt-h8q" firstAttribute="top" secondItem="WF6-Cl-v5X" secondAttribute="bottom" constant="32.5" id="vJI-vh-5a7"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" id="UeX-cC-VCh"/>
@@ -125,29 +122,29 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="50"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Time left: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eZU-eU-afe">
-                                        <rect key="frame" x="10" y="14.5" width="115" height="21"/>
+                                        <rect key="frame" x="5" y="16" width="125" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="SaJ-lj-Hhz"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hi-score:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="haJ-7L-M6U">
-                                        <rect key="frame" x="255" y="14.5" width="110" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hi-score: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="haJ-7L-M6U">
+                                        <rect key="frame" x="260" y="16" width="110" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="y9t-iF-eT2"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Score: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmm-zR-6ea">
-                                        <rect key="frame" x="135" y="14.5" width="110" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Score: 0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmm-zR-6ea">
+                                        <rect key="frame" x="140" y="16" width="110" height="18"/>
                                         <constraints>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="110" id="SUy-0E-J4J"/>
                                         </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
@@ -155,11 +152,11 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstItem="haJ-7L-M6U" firstAttribute="leading" secondItem="gmm-zR-6ea" secondAttribute="trailing" constant="10" id="0ln-5f-6p3"/>
-                                    <constraint firstItem="eZU-eU-afe" firstAttribute="leading" secondItem="ZWT-C8-XTb" secondAttribute="leading" constant="10" id="4wp-PW-88j"/>
+                                    <constraint firstItem="eZU-eU-afe" firstAttribute="leading" secondItem="ZWT-C8-XTb" secondAttribute="leading" constant="5" id="4wp-PW-88j"/>
                                     <constraint firstItem="eZU-eU-afe" firstAttribute="centerY" secondItem="ZWT-C8-XTb" secondAttribute="centerY" id="Ii1-jx-z0y"/>
                                     <constraint firstAttribute="height" constant="50" id="RRu-Yd-CDQ"/>
                                     <constraint firstItem="gmm-zR-6ea" firstAttribute="centerY" secondItem="ZWT-C8-XTb" secondAttribute="centerY" id="TwF-oR-LaN"/>
-                                    <constraint firstAttribute="trailing" secondItem="haJ-7L-M6U" secondAttribute="trailing" constant="10" id="Wc8-8y-r4e"/>
+                                    <constraint firstAttribute="trailing" secondItem="haJ-7L-M6U" secondAttribute="trailing" constant="5" id="Wc8-8y-r4e"/>
                                     <constraint firstItem="haJ-7L-M6U" firstAttribute="centerY" secondItem="ZWT-C8-XTb" secondAttribute="centerY" id="aLg-2N-ZLi"/>
                                     <constraint firstItem="gmm-zR-6ea" firstAttribute="leading" secondItem="eZU-eU-afe" secondAttribute="trailing" constant="10" id="eKK-Jv-J13"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="qZp-w8-nKJ"/>
